# MipMap

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-endstone.yml
native/src/: mipmap_plugin.cpp
src/endstone_mipmap/: config.toml  main.py
src/endstone_mipmap/core/: chunksSender.py
src/endstone_mipmap_cpp/: CMakeLists.txt
src/endstone_mipmap_cpp/include/endstone_mipmap_cpp/: DataStore.h  HttpServer.h  MapPlugin.h
src/endstone_mipmap_cpp/src/: DataStore.cpp  HttpServer.cpp  MapPlugin.cpp
webmap/: Dockerfile  main.py
webmap/api/: tiles.py
webmap/models/: chunk.py
webmap/services/: tileService.py
