[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-mipmap"
version = "1.0.3"

dependencies = ["aiohttp>=3.13.0"]

authors = [
    { name = "Mipa" },
    { name = "Bebrowskiy" },
]

description = "MipMap - Interactive Online Map for Endstone & LeviLamina."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "online-map"]

[project.urls]
Homepage = "https://github.com/MipaSenpai/MipMap"

[project.entry-points."endstone"]
mipmap = "endstone_mipmap:Map"
